--- a/exercicios/paralax/estilo/style.css
+++ b/exercicios/paralax/estilo/style.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-
+@font-face {
+    font-family: cinzel;
+    src: url();
+}
 * {margin: 0px; padding: 0px;}
 
 header{
@@ -33,6 +36,11 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 3.5vw;
+}
+
+section p{
+    padding-bottom: 2em;
 }
 
 .normal{
@@ -43,11 +51,27 @@ section{
 .imagem{
     background-color: #000000c7;
     color: white;
+    text-shadow: 1px 1px 0px black;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.395);
+    background-attachment: fixed;
 }
 
 .imagem p{
     width: 400px;
-    background-color: #00000045;
+    background-color: #00000063;
+    padding: 10px;
+    border-radius: 5px;
 }
 
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
+}
 
